@@ -1,3 +1,10 @@
+blueox (0.9.2)
+
+  * Fix a bug where context name that had a parent with a similiar, but not
+    exact prefix, might end up jumbled.
+
+-- Rhett Garber <rhettg@gmail.com>  Mon, 5 Jan 2015 15:05:00 -0800
+
 blueox (0.9.1)
 
   * Just log a warning if a duplicate context name is used.
